--- a/appsrc/AppFVC/AppFVC/Views/StatusHealthyPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/StatusHealthyPage.xaml
@@ -9,7 +9,7 @@
     <ScrollView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
         <StackLayout BackgroundColor="Transparent" x:Name="stSaudavel">
             
-            <Frame VerticalOptions="Start" HorizontalOptions="FillAndExpand" HeightRequest="150" CornerRadius="5"  Margin="0,30,0,5" HasShadow="True">
+            <Frame VerticalOptions="Start" HorizontalOptions="FillAndExpand" CornerRadius="0"  Margin="0,54,0,0" HasShadow="True">
                 
 
                 <Grid x:Name="gridSaudavel" >
@@ -29,13 +29,13 @@
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="Auto" />
                     </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" VerticalOptions="Start" Grid.RowSpan="2" Source="FrameSaudavel.png"></Image>
-                    <Label Margin="10,0,0,0" Grid.Column="1" FontSize="16" Grid.Row="0" HeightRequest="43" Text="Fique tranquilo, estamos te acompanhando" Style="{StaticResource BoldFont}" TextColor="Black" FontAttributes="Bold"></Label>
-                    <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1" FontSize="16" Text="Não identificamos nenhum risco de contaminação. Fique de olho nas nossas recomendações e mantenha-se seguro."></Label>
+                    <Image Grid.Column="0" VerticalOptions="Start" Grid.RowSpan="2" Source="HealthyPerson.png"></Image>
+                    <Label Margin="10,0,0,0" Grid.Column="1" FontSize="17" Grid.Row="0" HeightRequest="64" Text="Fique tranquilo, estamos te acompanhando" Style="{StaticResource BoldFont}" TextColor="Black" FontAttributes="Bold"></Label>
+                    <Label Margin="10,0,0,0" Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" FontSize="17" Text="Não identificamos nenhum risco de contaminação. Fique de olho nas nossas recomendações e mantenha-se seguro."></Label>
                 </Grid>
             </Frame>
 
-            <Frame Padding="25,0,10,0"   Margin="40,10,40,3" x:Name="FrVirus" HeightRequest="45" BackgroundColor="#219653"  CornerRadius="22">
+            <Frame Padding="25,0,10,0"   Margin="40,16,40,16" x:Name="FrVirus" HeightRequest="45" BackgroundColor="#219653"  CornerRadius="22">
               
                     <Frame.GestureRecognizers>
                         <TapGestureRecognizer
@@ -51,7 +51,7 @@
                 </StackLayout>
             </Frame>
             
-            <Frame Padding="0" Margin="40,0,40,3" x:Name="frSaudeSite" CornerRadius="5">
+            <Frame Padding="0" Margin="40,0,40,15" x:Name="frSaudeSite" CornerRadius="5">
                 <StackLayout Orientation="Vertical" HorizontalOptions="FillAndExpand" x:Name="stSaudeSite" Padding="10">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer
@@ -63,10 +63,10 @@
 
                     <Label Padding="20,5,20,0" Text="Mantenha-se seguro!" Style="{StaticResource BoldFont}" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
                     <Label Padding="20,5,20,0" Text="Ao sair de casa, lembre-se de manter a máscara cobrindo o nariz e a boca. Ao chegar, lave bem as mãos com água e sabão..."></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Clique para ver mais" Style="{StaticResource BoldFont}" TextColor="#6FCF97" FontAttributes="Bold"></Label>
+                    <Label HorizontalTextAlignment="End" FontSize="10" Text="Clique para ver mais" Style="{StaticResource BoldFont}" TextColor="#138845" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
-            <Frame Padding="0" Margin="40,0,40,3" x:Name="frTel" CornerRadius="5">
+            <Frame Padding="0" Margin="40,0,40,15" x:Name="frTel" CornerRadius="5">
                 <StackLayout Orientation="Vertical" x:Name="stTel" HorizontalOptions="FillAndExpand" Padding="10">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer
@@ -78,10 +78,10 @@
                     <Label Padding="20,5,20,0" Text="Está se sentindo mal?" Style="{StaticResource BoldFont}" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
                     <Label Padding="20,5,20,0" Text="Está com sintomas compatíveis com o COVID-19? Clique aqui e entre em contato com o Alô Saúde."></Label>
                     <Label Padding="20,0,20,0" Text="0800 333 3233" Style="{StaticResource BoldFont}" FontAttributes="Bold" VerticalOptions="Start" HorizontalTextAlignment="Center"></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Alô Saúde" Style="{StaticResource BoldFont}" TextColor="#6FCF97" FontAttributes="Bold"></Label>
+                    <Label HorizontalTextAlignment="End" FontSize="10" Text="Alô Saúde" Style="{StaticResource BoldFont}" TextColor="#138845" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
-            <Frame Padding="0" Margin="40,0,40,10" x:Name="frAtualiza" CornerRadius="5">
+            <Frame Padding="0" Margin="40,0,40,0" x:Name="frAtualiza" CornerRadius="5">
                 <StackLayout Orientation="Vertical" x:Name="stAtualiza"  HorizontalOptions="FillAndExpand" Padding="10">
                     <StackLayout.GestureRecognizers>
                         <TapGestureRecognizer
@@ -92,10 +92,10 @@
                     </StackLayout.GestureRecognizers>
                     <Label Padding="20,5,20,0" Text="Atualizações COVID-19" Style="{StaticResource BoldFont}" TextColor="#333333" FontAttributes="Bold" FontSize="15"></Label>
                     <Label Padding="20,5,20,0" Text="Floripa acaba de receber 600 novos respiradores e mais 10 mil testes rápidos ..."></Label>
-                    <Label HorizontalTextAlignment="Center" FontSize="10" Text="Clique para ver mais" Style="{StaticResource BoldFont}" TextColor="#6FCF97" FontAttributes="Bold"></Label>
+                    <Label HorizontalTextAlignment="End" FontSize="10" Text="Clique para ver mais" Style="{StaticResource BoldFont}" TextColor="#138845" FontAttributes="Bold"></Label>
                 </StackLayout>
             </Frame>
-
+            <Image Source="Group.png" VerticalOptions="EndAndExpand" Margin="0,30,0,30" HorizontalOptions="Center"></Image>
         </StackLayout>
     </ScrollView>
 </ContentPage>
